<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.siy.controller.RecorderSignUp.RecorderSignUpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/sign_up" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:onClick="imgPrev"
        android:padding="15dp"
        android:src="@drawable/back" />


    <android.support.v7.widget.CardView
        android:id="@+id/card_view_recorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#4b63e2e2"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_signup_recorder"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Sign Up"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"
                android:textStyle="bold" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_email_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_signup_recorder"
                android:textColorHint="@color/colorWhite">


                <EditText
                    android:id="@+id/et_email_signup_recorder"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_signup_recorder"
                    android:drawableLeft="@drawable/email"
                    android:textColor="@color/colorWhite"
                    android:hint="@string/email_id"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_password_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_email_wrapper"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/et_password_signup_recorder"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_email_wrapper"
                    android:drawableLeft="@drawable/password"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textColor="@color/colorWhite"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColorHint="@color/colorWhite" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_cpassword_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_password_wrapper"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/et_confirmpassword_signup_recorder"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_password_wrapper"
                    android:drawableLeft="@drawable/password"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"
                    android:textColor="@color/colorWhite"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textColorHint="@color/colorWhite" />


            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_signup_recorder"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_below="@+id/input_cpassword_wrapper"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn1_custom"
                android:padding="10dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />
        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tv_alreadymember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aleady_a_member_sign_in"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/card_view_recorder"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="30dp"
        android:onClick="btnSignIn"/>


</RelativeLayout>
